Closed Bug 565595 Opened 15 years ago Closed 15 years ago

glob is used uninitialized in XPCJSContextStack::GetSafeJSContext when JS_NewContext fails

Categories

(Core :: XPConnect, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 file)

223 XPCJSContextStack::GetSafeJSContext(JSContext * *aSafeJSContext) 225 if(!mSafeJSContext) 254 mSafeJSContext = JS_NewContext(rt, 8192); 255 if(mSafeJSContext) 286 } 287 if(!glob && mSafeJSContext)
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #445068 - Flags: review?(jorendorff)
Attachment #445068 - Flags: review?(jorendorff) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: