Bug 565595 glob is used uninitialized in XPCJSContextStack::GetSafeJSContext when JS_NewContext fails. r=jorendorff